EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==01/04/2009
Angelox: Bots: Added command '#Bot endureb' (enduring breath).
Angelox: Bots: Hopefully fixed bug where other sowers replaced primary sower (Druid).

==01/03/2009
Angelox: Bots: remade/improved commands '#Bot levitate'and '#bot invis'

==01/02/2009
Congdar: Bots: update command #bot inventory list   Now shows gear as item links.  Removed (Bot) as last name during bot creation.
Optional SQL: update npc_types set lastname='' where isbot=1;

==01/01/2009
Angelox: Bots: Added command '#Bot sow' (Druid has options) 
Angelox: Bots: Added command '#Bot levitate'.
Angelox: Bots: Added command '#bot invis' - (has options).

Required SQL: utils/sql/svn/250_bot_spell_update.sql

Angelox: Bots: Added command '#bot resist' (has options, don't use optional sql if you don't want).

Optional SQL: utils/sql/svn/250_optional_bot_spell_update.sql

Derision: Added chatserver for Chat Channel support. mail_opcodes.conf updated in utils.
Derision: See: http://www.eqemulator.net/wiki/wikka.php?wakka=ChatChannels

REQUIRED SQL:

CREATE TABLE `chatchannels` (
  `name` varchar(64) NOT NULL,
  `owner` varchar(64) NOT NULL,
  `password` varchar(64) NOT NULL,
  `minstatus` int(5) NOT NULL default '0',
  PRIMARY KEY  (`name`)
) ENGINE=MyISAM DEFAULT CHARSET=utf8;

also see utils/sql/svn/249_chatchannels.sql for suggested system channels.

==12/31/2008
Congdar: Bots: Added rule EQOffline:BotManaRegen default 1.0 is fastest. 3.0 is closer to player regen rates
Congdar: Bots: Added rule EQOffline:BotFinishBuffing default true. Allows out of combat buffing to complete even if the bot is out of mana.
Congdar: Bots: Fixed bug where bot ownership could change to somebody else.
Congdar: Bots: Added caster AA's for critical damage

==12/27/2008
Trevius: Changed QueryLoot so that commands that use it (#npcstats & #npcloot show) will now show Item Links instead of just Item Names.